--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -155,6 +155,27 @@ h6 {
   overflow-y: auto;
   z-index: 997;
   border-right: 1px solid color-mix(in srgb, var(--default-color), transparent 90%);
+  /* Customize scrollbar */
+  scrollbar-width: thin; 
+  scrollbar-color: #b3c9d3 var(--background-color);
+}
+
+/* For WebKit (Chrome, Safari, etc.) */
+.header::-webkit-scrollbar {
+  width: 4px;
+}
+
+.header::-webkit-scrollbar-track {
+  background: var(--background-color);
+}
+
+.header::-webkit-scrollbar-thumb {
+  background-color: #111; /* Dark black color */
+  border-radius: 10px;
+}
+
+.header::-webkit-scrollbar-thumb:hover {
+  background-color: #333; /* Darker black on hover */
 }
 
 .header .profile-img img {
