--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -199,7 +199,7 @@ h6 {
   font-size: 24px;
   margin: 0;
   font-weight: 700;
-  color: var(--heading-color);
+  color: var(--contrast-color);
 }
 
 .header .social-links {
@@ -212,7 +212,7 @@ h6 {
   align-items: center;
   justify-content: center;
   background: color-mix(in srgb, var(--default-color), transparent 90%);
-  color: var(--default-color);
+  color: var(--contrast-color);
   margin: 0 2px;
   border-radius: 50%;
   text-align: center;
